Upgrade tools and change approach for installing JDK